Makefile.am: disable [-Werror,Wstrict-prototypes] message
Signed-off-by: Kyr Shatskyy <kyrylo.shatskyy@clyso.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,6 +46,7 @@ libqatzip_la_SOURCES = \
 libqatzip_la_CFLAGS = \
                       -I./ \
                       -I../include/ \
+		      -Wno-strict-prototypes \
                       $(COMMON_CFLAGS) \
                       $(SAL_CFLAGS) \
                       $(ADF_CFLAGS) \
